globus-gram-job-manager (14.12-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 17:27:22 -0400

globus-gram-job-manager (14.11-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 17:04:40 -0400

globus-gram-job-manager (14.10-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 16:02:26 -0400

globus-gram-job-manager (14.9-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 15:53:17 -0400

globus-gram-job-manager (14.8-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 15:52:58 -0400

globus-gram-job-manager (14.8-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 15:48:18 -0400

globus-gram-job-manager (14.7-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 15:32:13 -0400

globus-gram-job-manager (14.6-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 14:34:54 -0400

globus-gram-job-manager (14.5-2+gt6.@distro@) @distro@; urgency=low

  * Add test dependencies

 -- Globus Toolkit <support@globus.org>  Fri, 25 April 2014 14:19:51 -0400

globus-gram-job-manager (14.5-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:30 -0400

globus-gram-job-manager (14.4-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:56 -0400

globus-gram-job-manager (14.3-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup
