@@ -1,3 +1,9 @@
+globus-xio-udt-driver (1.7-1+gt6.@distro@) @distro@; urgency=low
+
+  * Packaging fixes
+
+ -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 21:12:11 -0400
+
 globus-xio-udt-driver (1.6-1+gt6.@distro@) @distro@; urgency=low
 
   * Packaging fixes
