@@ -1,3 +1,9 @@
+globus-gram-job-manager (14.12-2+gt6.@distro@) @distro@; urgency=low
+
+  * Packaging fixes
+
+ -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 21:11:54 -0400
+
 globus-gram-job-manager (14.12-1+gt6.@distro@) @distro@; urgency=low
 
   * Packaging fixes
